# leveled-hotbackup-s3-sync

./: .gitignore  Makefile  README.md  app.py  hints.py  journal.py  manifest.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml  release.yml
examples/: config.cfg
leveled_hotbackup_s3_sync/: __main__.py  app.py  config.py  erlang.py  hints.py  journal.py  manifest.py  retrieve.py  s3mmap.py  utils.py
leveled_hotbackup_s3_sync/tests/: app_test.py  config_test.py  erlang_test.py  hints_test.py  journal_test.py  manifest_test.py  retrieve_test.py  s3mmap_test.py  utils_test.py
leveled_hotbackup_s3_sync/tests/data/: MANIFESTS
localstack/: docker-compose.yml
testdata/: MANIFESTS
